--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,10 @@
             font-family: "Bebas Neue";
             src: url("fonts/BebasNeue-Regular.otf");
         }
+        @font-face{
+            font-family: "oswald";
+            src: url("fonts/Oswald-Regular.ttf");
+        }
 
         body {
             font-family: 'Lato', sans-serif;
@@ -309,7 +313,12 @@
         }
 
         .header h3 {
-            font-size: 3em;
+            font-size: 4em;
+            font-family:oswald !important;
+        }
+        .header h4{
+            font-size:2em;
+            font-family:oswald !important;
         }
 
         .header h1 {
