--- a/css/style.css
+++ b/css/style.css
@@ -322,7 +322,7 @@
         }
 
         .header h1 {
-            font-size: 7em;
+            font-size: 8em;
             margin-top: 1em;
             margin-bottom: 1em;
             color: #ea4235;
@@ -330,6 +330,7 @@
             letter-spacing: 0.09em;
             cursor: pointer;
             transition: all 0.5s;
+            font-family:oswald !important;
         }
 
         .header h1:hover {
@@ -486,6 +487,7 @@
             font-size: 3em;
             display: none;
             letter-spacing: 0.05em;
+            font-family:oswald !important;
         }
 
         .scrolled-nav {
