wakarchuk change fre for new members and new code of conduct

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,9 @@
         - phone
         -tab-port
         */
-
+.fancybox-button--thumbs{
+  display:none !important;
+}
 @font-face {
   font-family: "Bebas Neue";
   src: url("fonts/BebasNeue-Regular.otf");
